# py-data-faker

./: .gitignore  Containerfile  README.md  example.yaml  main.py  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json
datafaker/: DataGenerator.py  Schema.py  SchemaParser.py  Schemas.py  YamlParser.py
tests/: example_schema_test.yaml  test_EXPRESSION.py  test_FIXED.py  test_RANDOM.py  test_SELECTION.py  test_SEQUENTIAL.py  test_SchemaParser.py
