[project]
name = "py-data-faker"
version = "0.1.0"
description = "An updated version of dunnhumby's data-faker in PySpark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "dataclasses>=0.8",
    "datetime>=5.5",
    "logging>=0.4.9.6",
    "pyyaml>=6.0.2",
    "typing>=3.10.0.0",
]
